# polymarket

./: .dockerignore  .env.example  .gitignore  Dockerfile  koyeb.yaml  pyproject.toml
bot/: __main__.py  cli.py  config.py  main.py  web.py
bot/arbitrage/: engine.py
bot/clients/: polymarket_client.py
bot/core/: engine.py  paper_trader.py
bot/health/: watchdog.py
bot/market_making/: engine.py
bot/models/: __init__.py
bot/notifications/: telegram.py
bot/reconciliation/: engine.py
bot/risk/: manager.py
config/: config.yaml
tests/: test_arbitrage.py  test_market_making.py  test_paper_trader.py  test_risk.py  test_telegram.py
