[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Automated trading bot for Polymarket prediction markets"
requires-python = ">=3.11"
dependencies = [
    "polymarket-client>=0.1.0b6",
    "pydantic-settings>=2.0",
    "httpx",
    "python-dotenv",
    "pyyaml",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
polymarket-bot = "bot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
